# psarc_unpacker

./: .gitignore  Cargo.toml
examples/: simple.rs
mop/: 1016884781.wem  album_samcrometallicamasterofpuppetsv11_128.dds  album_samcrometallicamasterofpuppetsv11_256.dds  album_samcrometallicamasterofpuppetsv11_64.dds  samcrometallicamasterofpuppetsv11.xblock  samcrometallicamasterofpuppetsv11_aggregategraph.nt  samcrometallicamasterofpuppetsv11_bass.json  samcrometallicamasterofpuppetsv11_bass.sng  samcrometallicamasterofpuppetsv11_lead.json  samcrometallicamasterofpuppetsv11_lead.sng  samcrometallicamasterofpuppetsv11_rhythm.json  samcrometallicamasterofpuppetsv11_rhythm.sng  samcrometallicamasterofpuppetsv11_rhythm2.json  samcrometallicamasterofpuppetsv11_rhythm2.sng  samcrometallicamasterofpuppetsv11_showlights.xml  samcrometallicamasterofpuppetsv11_vocals.json  samcrometallicamasterofpuppetsv11_vocals.sng  samcrometallicamasterofpuppetsv11_vocals.sng.json  song_samcrometallicamasterofpuppetsv11.bnk  song_samcrometallicamasterofpuppetsv11_preview.bnk  songs_dlc_samcrometallicamasterofpuppetsv11.hsan  toolkit.version
src/: decryptor.rs  file_reader.rs  lib.rs  main.rs  models.rs  psarc.rs  tabs_file.rs
