[package]
name = "tabs_converter"
version = "0.1.0"
edition = "2021"

[dependencies]
aes = "0.8"
cfb-mode = "0.8.2"
byteorder = "1.4"
flate2 = "1.0"
bitflags = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image_dds = "0.7.1"
image = "0.25.5"
ogg = "0.9.2"
wem_converter = { git = "https://github.com/TABS-Team/wem_converter.git" }