[package]
name = "psarc_unpacker"
version = "0.1.0"
edition = "2021"

[dependencies]
aes = "0.8"
ctr = "0.9.2"
cfb-mode = "0.8.2"
byteorder = "1.4"
flate2 = { version = "1.0", features = ["zlib"] }
bitflags = "1.3"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-error = "0.2"
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"